testdata/baselines/reference/submodule/conformance/typedefOnSemicolonClassElement.errors.txt
typedefOnSemicolonClassElement.js(4,14): error TS8010: Type annotations can only be used in TypeScript files.


==== typedefOnSemicolonClassElement.js (1 errors) ====
    export class Preferences {
      /** @typedef {string} A */
      ;
      /** @type {A} */
                 ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
      a = 'ok'
    }
    